scss/forms/_form-multi-select.scss
/* ... */
.form-multi-select-buttons {
  display: flex;
  align-items: center;
  min-height: calc(2 * var(--#{$prefix}form-multi-select-selection-padding-y) + calc(var(--#{$prefix}form-multi-select-font-size) * var(--#{$prefix}form-multi-select-line-height)));  // stylelint-disable-line function-disallowed-list
  padding: 0 var(--#{$prefix}form-multi-select-selection-padding-y);
}

.form-multi-select-cleaner,
.form-multi-select-indicator {
  position: relative;
  z-index: 2;
  box-sizing: content-box;
  background-color: transparent;
  background-repeat: no-repeat;
  background-position: center;
  border: 0;

  &:focus {
    z-index: 5;
    outline: 0;
    box-shadow: var(--#{$prefix}focus-ring-x, 0) var(--#{$prefix}focus-ring-y, 0) var(--#{$prefix}focus-ring-blur, 0) var(--#{$prefix}focus-ring-width) var(--#{$prefix}focus-ring-color);
    @include border-radius($border-radius);
  }

  &::before {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: "";
  }
}

.form-multi-select-cleaner {
  width: var(--#{$prefix}form-multi-select-cleaner-width);
  height: var(--#{$prefix}form-multi-select-cleaner-height);

  &::before {
    background-color: var(--#{$prefix}form-multi-select-cleaner-icon-color);
    mask: var(--#{$prefix}form-multi-select-cleaner-icon) center / var(--#{$prefix}form-multi-select-cleaner-icon-size) no-repeat;
  }

  &:focus::before,
  &:hover::before {
    background-color: var(--#{$prefix}form-multi-select-cleaner-icon-hover-color);
  }
}

.form-multi-select-indicator {
  width: var(--#{$prefix}form-multi-select-indicator-width);
  height: var(--#{$prefix}form-multi-select-indicator-height);
  @include transition(transform .15s ease-in-out);

  &::before {
    background-color: var(--#{$prefix}form-multi-select-indicator-icon-color);
    mask: var(--#{$prefix}form-multi-select-indicator-icon) center / var(--#{$prefix}form-multi-select-indicator-icon-size) no-repeat;
  }

  &:focus::before,
  &:hover::before {
    background-color: var(--#{$prefix}form-multi-select-indicator-icon-hover-color);
  }

  .form-multi-select.show & {
    transform: rotate(180deg);
  }
}

.form-multi-select-tag {
  display: flex;
  align-items: center;
  padding: var(--#{$prefix}form-multi-select-tag-padding-y) var(--#{$prefix}form-multi-select-tag-padding-x);
  background-color: var(--#{$prefix}form-multi-select-tag-bg);
  border: var(--#{$prefix}form-multi-select-tag-border-width) solid var(--#{$prefix}form-multi-select-tag-border-color);
  @include border-radius(var(--#{$prefix}form-multi-select-tag-border-radius));
}

.form-multi-select-tag-delete {
  position: relative;
  z-index: 2;
  box-sizing: content-box;
  width: var(--#{$prefix}form-multi-select-tag-delete-width);
  height: var(--#{$prefix}form-multi-select-tag-delete-height);
  padding: var(--#{$prefix}form-multi-select-tag-delete-padding-y) var(--#{$prefix}form-multi-select-tag-delete-padding-x);
  margin-inline-start: $spacer * .5;
  background-color: transparent;
  border: 0;

  &::before {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: "";
    background-color: var(--#{$prefix}form-multi-select-tag-delete-icon-color);
    mask: var(--#{$prefix}form-multi-select-tag-delete-icon) center / var(--#{$prefix}form-multi-select-tag-delete-icon-size) no-repeat;
  }

  &:focus::before,
  &:hover::before {
    background-color: var(--#{$prefix}form-multi-select-tag-delete-icon-hover-color);
  }
}

.form-multi-select-dropdown {
  position: absolute;
  z-index: var(--#{$prefix}form-multi-select-zindex);
  display: none; // none by default, but block on "open" of the menu
  min-width: var(--#{$prefix}form-multi-select-dropdown-min-width);
  background-color: var(--#{$prefix}form-multi-select-dropdown-bg);
  background-clip: padding-box;
  border: var(--#{$prefix}form-multi-select-dropdown-border-width) solid var(--#{$prefix}form-multi-select-dropdown-border-color);
  @include border-radius(var(--#{$prefix}form-multi-select-dropdown-border-radius));

  .form-multi-select.show & {
    display: block;
  }
}

.form-multi-select-all {
  display: block;
  width: 100%;
  padding: var(--#{$prefix}form-multi-select-select-all-padding-y) var(--#{$prefix}form-multi-select-select-all-padding-x);
  color: var(--#{$prefix}form-multi-select-select-all-color);
  text-align: start;
  background-color: var(--#{$prefix}form-multi-select-select-all-bg);
  border: 0;
  border-bottom: var(--#{$prefix}form-multi-select-select-all-border-width) solid var(--#{$prefix}form-multi-select-select-all-border-color);

  &:hover {
    color: var(--#{$prefix}form-multi-select-select-all-hover-color);
    background-color: var(--#{$prefix}form-multi-select-select-all-hover-bg);
  }
}

.form-multi-select-options {
  padding: var(--#{$prefix}form-multi-select-options-padding-y) var(--#{$prefix}form-multi-select-options-padding-x);
  font-size: var(--#{$prefix}form-multi-select-options-font-size);
  font-weight: var(--#{$prefix}form-multi-select-options-font-weight);
  color: var(--#{$prefix}form-multi-select-options-color);
}
/* ... */

